--- a/k9mail/src/main/res/values-de/strings.xml
+++ b/k9mail/src/main/res/values-de/strings.xml
@@ -469,6 +469,10 @@ Um Fehler zu melden, neue Funktionen vorzuschlagen oder Fragen zu stellen, besuc
   <string name="account_settings_quote_prefix_label">Zitat-Präfix</string>
   <string name="account_settings_crypto">Kryptographie</string>
   <string name="account_settings_crypto_app">OpenPGP-Anbieter</string>
+  <string name="account_settings_openpgp">OpenPGP</string>
+  <string name="account_settings_smime">S/MIME</string>
+  <string name="account_settings_smime_checkbox_title">Aktiviere S/MIME Verschlüsselung</string>
+  <string name="account_settings_smime_checkbox_text">Beschreibung.</string>
   <string name="account_settings_no_openpgp_provider_installed">Kein OpenPGP-Anbieter installiert</string>
   <string name="account_settings_mail_check_frequency_label">Häufigkeit der E-Mail-Abfrage</string>
   <string name="account_settings_storage_title">Speicher</string>
